# ChangeLog for media-gfx/gifsicle
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/ChangeLog,v 1.12 2006/08/30 09:13:15 mr_bones_ Exp $

  30 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -gifsicle-1.40.ebuild:
  clean out old, non-modX ebuild

  21 Jul 2006; Joshua Jackson <tsunam@gentoo.org> gifsicle-1.44.ebuild:
  Stable x86; bug #116807

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gifsicle-1.44.ebuild:
  ppc stable, bug #116807

  16 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> gifsicle-1.44.ebuild:
  1.44 ready for modular X. Fixes bug 116807. Thanks to Keri Harris
  <harriskeri at mcs dot vuw dot ac dot nz>.

*gifsicle-1.44 (20 Dec 2005)

  20 Dec 2005; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,
  +gifsicle-1.44.ebuild:
  1.44 version bump for bug 115967. Thanks to Ed Cates <ed at cates dot net>.
  Also, adding to graphics herd in metadata.xml.

  03 Nov 2005; Fabian Groffen <grobian@gentoo.org> gifsicle-1.40.ebuild:
  Marked ~ppc-macos (bug #110937)

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> gifsicle-1.40.ebuild:
  Stable on ppc.

  23 May 2005; Michael Sterrett <mr_bones_@gentoo.org> gifsicle-1.40.ebuild:
  stable for x86

  09 May 2005; David Holm <dholm@gentoo.org> gifsicle-1.40.ebuild:
  Added to ~ppc.

  18 Nov 2004; Karol Wojtaszek <sekretarz@gentoo.org> gifsicle-1.40.ebuild:
  ~amd64 keyworded

*gifsicle-1.40 (10 Oct 2003)

  10 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org> gifsicle-1.40.ebuild:
  initial commit (bug 23853)
