@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/gifsicle-1.44.ebuild,v 1.4 2006/07/21 04:23:08 tsunam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/gifsicle-1.44.ebuild,v 1.5 2007/03/12 14:05:42 gustavoz Exp $
 
 DESCRIPTION="A UNIX command-line tool for creating, editing, and getting information about GIF images and animations"
 HOMEPAGE="http://www.lcdf.org/~eddietwo/gifsicle/"
@@ -8,7 +8,7 @@ SRC_URI="http://www.lcdf.org/~eddietwo/gifsicle/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ppc ~ppc-macos x86"
+KEYWORDS="~amd64 ppc ~ppc-macos ~sparc x86"
 IUSE="X"
 
 DEPEND="X? ( || ( (
